--- a/pal_navigation/package.xml
+++ b/pal_navigation/package.xml
@@ -9,6 +9,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <run_depend>speed_limit</run_depend>
   <run_depend>pal_mobile_base</run_depend>
 
   <export>
